Renamed RvGUI... to RvGui...

--- a/Ravine/Ravine.vcxproj
+++ b/Ravine/Ravine.vcxproj
@@ -179,8 +179,8 @@
     <ClCompile Include="RvCmdBuffer.cpp" />
     <ClCompile Include="RvDynamicBuffer.cpp" />
     <ClCompile Include="RvGraphicsPipeline.cpp" />
-    <ClCompile Include="RvGUI.cpp" />
-    <ClCompile Include="RvGUIPipeline.cpp" />
+    <ClCompile Include="RvGui.cpp" />
+    <ClCompile Include="RvGuiPipeline.cpp" />
     <ClCompile Include="RvLinePipeline.cpp" />
     <ClCompile Include="RvRenderPass.cpp" />
     <ClCompile Include="RvWireframePipeline.cpp" />
@@ -213,8 +213,8 @@
     <ClInclude Include="RvCmdBuffer.h" />
     <ClInclude Include="RvDynamicBuffer.h" />
     <ClInclude Include="RvGraphicsPipeline.h" />
-    <ClInclude Include="RvGUI.h" />
-    <ClInclude Include="RvGUIPipeline.h" />
+    <ClInclude Include="RvGui.h" />
+    <ClInclude Include="RvGuiPipeline.h" />
     <ClInclude Include="RvLinePipeline.h" />
     <ClInclude Include="RvRenderPass.h" />
     <ClInclude Include="RvWireframePipeline.h" />
