--- a/Ravine/Ravine.vcxproj.filters
+++ b/Ravine/Ravine.vcxproj.filters
@@ -70,11 +70,11 @@
     <Filter Include="Header Files\Ravine System\Pipelines">
       <UniqueIdentifier>{fc07786f-9b74-46ec-ae3f-fa5cd2d0069d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Ravine System\Functionalities">
-      <UniqueIdentifier>{56ac1a76-967b-4fe0-9933-0cd103b867fa}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Ravine System\Functionalities">
+    <Filter Include="Source Files\Ravine System\Utilities">
       <UniqueIdentifier>{5a83609b-8dfd-453f-bfde-dc474bb47604}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Ravine System\Utilities">
+      <UniqueIdentifier>{56ac1a76-967b-4fe0-9933-0cd103b867fa}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -175,7 +175,7 @@
       <Filter>Source Files\Ravine System\Pipelines</Filter>
     </ClCompile>
     <ClCompile Include="RvPhysics.cpp">
-      <Filter>Source Files\Ravine System\Functionalities</Filter>
+      <Filter>Source Files\Ravine System\Utilities</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -291,7 +291,7 @@
       <Filter>Header Files\Ravine System\Internal</Filter>
     </ClInclude>
     <ClInclude Include="RvPhysics.h">
-      <Filter>Header Files\Ravine System\Functionalities</Filter>
+      <Filter>Header Files\Ravine System\Utilities</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
